--- a/springboot-karaf-tutorial/pom.xml
+++ b/springboot-karaf-tutorial/pom.xml
@@ -204,12 +204,6 @@
             <version>${mybatis-generator-core.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>${fastjson.version}</version>
-        </dependency>
-
         <!-- ***** karaf ***** -->
         <dependency>
             <groupId>org.ops4j.pax.exam</groupId>
@@ -387,6 +381,18 @@
             <artifactId>service-impl</artifactId>
             <version>1.0.0-SNAPSHOT</version>
             <!--<scope>test</scope>-->
+        </dependency>
+
+        <!-- demo2 -->
+        <dependency>
+            <groupId>com.mengka.microservices.karaf</groupId>
+            <artifactId>mengka-services-api</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.mengka.microservices.karaf</groupId>
+            <artifactId>mengka-services-impl</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <!-- ***** end ***** -->
 
